--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
 			{{ content }}
 		</main>
 		{% include footer.html %}
+  		<!-- JavaScript Libraries -->
 		<script src="{{ '/assets/js/main.js' | relative_url }}" type="text/javascript" charset="utf-8"></script>
 
 	</body>
