--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -34,12 +34,12 @@ person.name }}{% endif %}{% if person.role %}, {{ person.role }}</li>{% endif %}
 {% endfor %}
 	</ul>
 </div>
-{% assign site_posts = site.posts %}
 {% if page.title == 'Prism' or page.title == 'Ivanhoe' or page.title == 'ClockWork' or page.title == 'Dash-Amerikan' or page.title == 'UVA Reveal' or page.title == 'Neatline' %}
-	{% assign project_posts = site_posts | where: 'tags', page.title %}
+{% assign posts_tag = page.title | downcase %}
+{% assign project_posts = site.posts | where: 'tags', posts_tag %}
 {% if project_posts != empty %}
 <div id="related-posts">
-	h2>Related Posts</h2>
+	<h2>Related Posts</h2>
 	<ul>
 {% for post in project_posts %}
 {% capture authorstring %}
