--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,8 +2,10 @@
 layout: default
 ---
 <header>
+  <hgroup>
   <h1>{{ page.title | replace: ' - ', ': ' | replace: ' and ', ' &amp; ' }}</h1>
   <p>{{ page.excerpt }}</p>
+  </hgroup>
 </header>
 
 <div class="content">
