--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -7,9 +7,9 @@ layout: default
 
 <header>
 	<hgroup>
-		<span class="eyebrow">Our Work</span>
+		<span class="eyebrow">Projects</span>
 		<h1>{{ page.title | replace: ' - ', ': ' }}</h1>
-		</hgroup>
+	</hgroup>
 </header>
 <div class="content">
 	<div class="project-image">
