--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -87,7 +87,6 @@ h1,h2,h3,h4 {
 #scholarslab-header {
 	position: relative;
 	padding: 1rem;
-
 	#global-navigation > .menu-toggle {
 		position: absolute;
 		top: 1rem;
@@ -171,21 +170,27 @@ section.feature {
 
 /* Main content for all pages. */
 #main {
-	background: rgba(0,0,0,0.05);
 
 	& > header:first-of-type,
 	body.post & article header:first-of-type
 	{
-		padding: 4rem 1rem 0;
+		padding: 4rem 0 0;
 		display:flex;
 		flex-direction: column;
 		justify-content: flex-end;
 		min-height: 30vh;
+		background: rgba(0,0,0,0.0375);
 		@media screen and (min-width: 900px) {
 			min-height: 50vh;
 		}
-		margin:0 auto;
-		max-width: 900px;
+
+		hgroup {
+			max-width: 900px;
+			margin: 0 auto;
+			width: 100%;
+			border-bottom: 2rem solid white;
+			padding: 0 2rem;
+		}
 
 		h1 {
 			font-size: 3rem;
@@ -200,7 +205,7 @@ section.feature {
 	.content {
 		max-width: 900px;
 		margin: 0 auto;
-		padding: 1rem;
+		padding: 0 2rem 2rem;
 	}
 }
 
@@ -343,7 +348,7 @@ section.feature {
 	flex-direction: row;
 	flex-wrap:nowrap;
 	justify-content: space-between;
-
+	padding: 1rem;
 	.home & {
 		min-height: 80vh;
 		border:none;
