Styling & text fixes on /pages...
* Removed "all" from Design+Code description of the /work page, as it does not list all projects
* Commented out CSS body font-weight, as was preventing pages with <strong> text from bolding that text and didn't see bad repercussions of removing this line appear
* looked at how each /pages page displayed, fixed formatting as needed (partly done, still working but pushing so JB has latest pages for styling)

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -50,7 +50,7 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: var(--franklin-gothic-urw);
-    font-weight: 300;
+/*    font-weight: 300; Removed so that <strong> tags work on pages, e.g. on /about page */
 	font-size: 20px;
 	line-height: 1.5; // if 16px, = 24px line height
 	color: var(--uvalib-text-almost-black);
