--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -217,6 +217,7 @@ section.feature {
 	background-color: rgba(0,0,0,0.125);
 }
 
+/* Projects browse */
 .our-projects section {
 	display: flex;
 	justify-content: space-between;
@@ -238,6 +239,57 @@ section.feature {
 	font-size: 1rem;
 	margin:0;
 }
+
+/* People browse */
+body.people .gallery {
+	display:flex;
+	gap: 1rem;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	a {
+		flex: 1 1 100%;
+		max-width: 48%;
+		@media screen and (min-width: 800px) {
+			max-width: 23%;
+		}
+		display:inline-block;
+		text-decoration:none;
+		color: var(--uvalib-text-dk-grey);
+
+		p {
+			margin:0;
+			line-height:1;
+		}
+		.person-name {
+			font-weight: bold;
+			margin-bottom: 0.25rem;
+		}
+		.person-role{
+			font-size: 1rem;
+		}
+	}
+
+}
+
+#alumni ul {
+	list-style:none;
+	margin:0;
+	padding: 0;
+	columns: 2;
+	@media screen and (min-width: 800px) {
+		columns: 4;
+
+	}
+	font-size: 1rem;
+
+	a {
+		text-decoration:none;
+		display:block;
+		border-bottom: 1px solid rgba(0,0,0,0.1);
+		padding: 0.5rem 1rem;
+	}
+}
+
 
 /* Footer */
 #footer {
