Stylesheet ToC, hours cal style, /pages text

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,18 @@
 ---
 ---
+/* Stylesheet table of contents:
+Variables
+General Styles
+Site Banner
+Main content for all pages
+Homepage Styles
+Projects browse
+People browse
+Footer
+Navigation
+Use the Lab page: weekly calendar hours styling
+*/
+
 /* Variables */
 :root {
 	/* Brand Fonts */
@@ -32,7 +45,6 @@
 }
 
 /* General Styles: */
-
 * {
 	box-sizing: border-box;
 }
@@ -304,7 +316,6 @@ body.people .gallery {
 	}
 }
 
-
 /* Footer */
 #footer {
 	padding: 1rem;
@@ -313,7 +324,6 @@ body.people .gallery {
 	}
 
 }
-
 
 /* Navigation */
 #global-navigation {
@@ -445,4 +455,29 @@ body.people .gallery {
 	}
 }
 
+}
+
+/* Use the Lab page: weekly calendar hours styling */
+.s-lc-whw thead { background-color: #F5F5F5; }
+.s-lc-whw-head-date { color: #5F5F5F; }
+.s-lc-whw-today-h {  background-color: #ddd; }
+.s-lc-whw-today { background-color: #F5F5F5; }
+.s-lc-whw-bh { text-align: right; white-space: nowrap; }
+.s-lc-whw-locname { font-weight: bold;}
+.s-lc-whw-sublocname{ padding-left: 10px!important; }
+.s-lc-whw-footnote { color: #555; font-size: 80%; }
+.s-lc-whw-footnote td:hover { background-color:#fff!important;}
+/* Below styles can be removed if you are already using Bootstap v3 in host page */
+.s-lc-whw-cont {font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; font-size: 12px;}
+.s-lc-whw-pr, .s-lc-whw-ne{ padding: 5px 10px; font-size: 12px; line-height: 1.5; border-radius: 3px; color: #333; background-color: #fff; border-color: #ccc; display: inline-block; margin-bottom: 0; font-weight: 400; text-align: center; vertical-align: middle; cursor: pointer; background-image: none; border: 1px solid transparent; white-space: nowrap; }
+.s-lc-whw-pr:disabled { background-color: #efefef; }
+.s-lc-whw-ne:disabled { background-color: #efefef; }
+.s-lc-whw { width: 100%; margin-bottom: 20px; max-width: 100%; background-color: transparent; border-bottom: none; border-left: none; border-collapse: collapse; border-spacing: 0; }
+.s-lc-whw>tbody>tr>td { padding: 5px; }
+.s-lc-whw>thead>tr>th { vertical-align: bottom; border-bottom: 2px solid #ddd; padding: 5px;}
+.s-lc-whw th { border-top: none; border-bottom: none; border-right: none;}
+.sr-only { position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0,0,0,0); border: 0; }
+@media (max-width: 768px) {
+   .s-lc-whw-cont .table-responsive { width: 100%; margin-bottom: 15px; overflow-y: hidden; overflow-x: scroll; -ms-overflow-style: -ms-autohiding-scrollbar; border: 1px solid #ddd; -webkit-overflow-scrolling: touch; }
+   .s-lc-whw td { white-space: nowrap; }
 }
