Various page & link updates...
* Added ID anchor to "using the makerspace" inside /makerspace
* Link to that from /visit body content
* Tried to link from nav dropdown by changing link in config, but currently not working??? Had to remove my change from config file to push this (was makerspace/#using-the-makerspace)
* finished /visit page text
* /accessibility format fix

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,6 +11,7 @@ People browse
 Footer
 Navigation
 Use the Lab page: weekly calendar hours styling
+(See also: /pages/makerspace.html has its own styling CSS in its header)
 */
 
 /* Variables */
